<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity" android:orientation="vertical"
    android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_item_photo"
        android:layout_marginTop="-5dp"
        android:text="@string/nick_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    
    <ImageView
        android:id="@+id/profile_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        android:layout_below="@id/title"
        android:layout_marginTop="-10dp"/>

<LinearLayout
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@id/profile_splash"
    android:layout_marginTop="10dp">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_marginLeft="70dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"/>
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearlayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_email_black_24dp"
            android:layout_marginLeft="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/email"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearlayout_1"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_room_black_24dp"
            android:layout_marginLeft="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/city"/>
    </LinearLayout>

</RelativeLayout>